--- a/shopping-list/package.json
+++ b/shopping-list/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^5.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
